Maven now formats java code as part of the build process.
We should always run 'mvn verify' before we do code submissions. This will minimize code differences that aren't important.